agregar al carrito

--- a/index.html
+++ b/index.html
@@ -75,19 +75,21 @@
                 <h2>Comidas</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam unde eius qui id!
                 </p>
+                <a href="compras.html"><button>Agregar al carrito</button></a>
             </aside>
             <aside>
                 <img src="img2/pancakes-5989136.jpg">
                 <h2>Postres</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam unde eius qui id!
                 </p>
+                <a href="compras.html"><button>Agregar al carrito</button></a>
             </aside>
             <aside>
                 <img src="img2/barista-5055060.jpg">
                 <h2>Bebidas</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam unde eius qui id!
                 </p>
-                <a href="#"><button>Leer mas</button></a>
+                <a href="compras.html"><button>Agregar al carrito</button></a>
             </aside>
             </div>
 
